added two buttons - one works in Chrome but not iOS and the other works in iOS but not Chrome - both works in Firefox and desktop Safari

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "ecstatic",
+    "start": "ecstatic --port 9000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
